# Speechster_ESP32-H2-Testing

./: .gitignore  BLEData.py  pins.txt
Speechster-ESP32-H2-Tesing-B1-PR1/BLE-Node/: package-lock.json  package.json  server.js
Speechster-ESP32-H2-Tesing-B1-PR1/BT-Test/: readme.md  sdkconfig  sdkconfig.old
Speechster-ESP32-H2-Tesing-B1-PR1/BT-Test-ADV-MIC/: sdkconfig  sdkconfig.defaults  sdkconfig.old
Speechster-ESP32-H2-Tesing-B1-PR1/BT-Test-ADV-MIC/.cache/clangd/index/: BT-Test.c.5A478314506AFBB9.idx
Speechster-ESP32-H2-Tesing-B1-PR1/BT-Test-ADV-MIC/Website/: ble.js
Speechster-ESP32-H2-Tesing-B1-PR1/BT-Test-ADV-MIC/main/: BT-Test.c  CMakeLists.txt
Speechster-ESP32-H2-Tesing-B1-PR1/BT-Test/Website/: ble.js  index.html
Speechster-ESP32-H2-Tesing-B1-PR1/BT-Test/main/: BT-Test.c  CMakeLists.txt  adpcm.c  adpcm.h  raw.c
Speechster-ESP32-H2-Tesing-B1-PR1/FSR_402-Test/: CMakeLists.txt
Speechster-ESP32-H2-Tesing-B1-PR1/FSR_402-Test/.cache/clangd/index/: continuous_read_main.c.BBD237AA396F732C.idx
Speechster-ESP32-H2-Tesing-B1-PR1/FSR_402-Test/main/: CMakeLists.txt  main.c
Speechster-ESP32-H2-Tesing-B1-PR1/INMP_441-Test/: .gitignore  CMakeLists.txt  audioCapture.py  sdkconfig  sdkconfig.old  validate_all.py
Speechster-ESP32-H2-Tesing-B1-PR1/INMP_441-Test/.cache/clangd/index/: main.c.4760DE8F30CF3122.idx  main.c.4D37DF4D1A662732.idx
Speechster-ESP32-H2-Tesing-B1-PR1/INMP_441-Test/main/: CMakeCache.txt  CMakeLists.txt  Kconfig.projbuild  main.c
Speechster-ESP32-H2-Tesing-B1-PR1/Main - Working/: readme.md  server.js
Speechster-ESP32-H2-Tesing-B1-PR1/Main-Working/: changelog.md  sdkconfig  sdkconfig.old
Speechster-ESP32-H2-Tesing-B1-PR1/Main-Working/main/: main.c
Speechster-ESP32-H2-Tesing-B1-PR1/Main-Working/public/: index.html
Speechster-ESP32-S3-PR1/: power_parts_SKUs.csv
Speechster-ESP32-S3-PR1/Main-Working/: CMakeLists.txt  absolute_cinema.zsh  partitions.csv  readme.ritual  sdkconfig  sdkconfig.defaults  server.js  speechster_monitor.py
Speechster-ESP32-S3-PR1/Main-Working/main/: CMakeLists.txt  idf_component.yml  main.c
Speechster-ESP32-S3-WROOM-1-N8-B1-PR1/Main-Working/: sdkconfig  sdkconfig.defaults  sdkconfig.old
Speechster-ESP32-S3-WROOM-1-N8-B1-PR1/Main-Working/main/: CMakeLists.txt  main.c  sanityCheck.txt
